# V4C

./: .coverage  LICENSE  MANIFEST.in  README.md  local_test_plot.py  pyproject.toml  requirements.txt  setup.py  test_output.tsv
.github/workflows/: test.yml
examples/: README.md  V4C.ipynb  api_example.py  example_script.py
genome/: hg38_promoters.bed
test/: test_extract.py  test_kmeans.py  test_silhouette.py
tests/: conftest.py  local_test_extract.py  test_compare.py  test_extract.py  test_plot.py
v4c/: __init__.py  compare.py  convert.py  extract.py  plot.py  utils.py
v4c.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
