[build-system]
requires = [
    "flit_core >=3.2,<4"
]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "Vitural_4c"
authors = [{name = "Zoe Chen", email = "zoe.chen2@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest"
]
requires-python = ">=3.9"

[project.urls]
Home = "https://github.com/zoechen0717/BMI203-HW4-Clustering"
