[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v4c"
version = "0.1.0"
description = "Virtual 4C analysis package for Hi-C contact frequency extraction and visualization."
authors = [{name = "Zoe Chen", email = "zoe.chen2@ucsf.com"}]
dependencies = ["numpy", "pandas", "matplotlib", "cooler", "argparse"]
requires-python = ">=3.6"
